# experiment-template

./: .gitignore  Makefile  README.md  experiment_info.yaml  pyproject.toml  requirements.txt  setup.py
configs/: default_config.yaml
scripts/: run_experiment.py  sync_template.py
src/: __init__.py
src/core/: __init__.py  experiment.py
tests/: test_experiment.py
